  * Add X2Go agent / NX agent flavouring via patch system:
    - 200_nxagent_check-binary-x2go-flavour.patch
    - 201_nxagent_set-x2go-icon-if-x2goagent-flavour.patch
    - 300_nxagent_set-wm-class.patch
    - 999_nxagent_unbrand-nxagent-brand-x2goagent.patch
  * Add patch: 023_add-x2goagent-wrapper.patch.
  * Add patch: 209_x2goagent-add-man-page.patch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 11 Jan 2012 15:30:36 +0100

nx-libs (2:3.5.0.2-0) unstable; urgency=low

  * Re-add binary wrapper scripts to the patch system as we
    want to provide them in the tarball.
  * Update folder name where applied patches end up in the tarball
    release.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 10 Jan 2012 14:38:52 +0100

nx-libs (2:3.5.0.1-0) unstable; urgency=low

  * Increment version to stay in sync with client-only branch.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Tue, 10 Jan 2012 12:05:46 +0100

nx-libs (2:3.5.0.0-0) unstable; urgency=low

  * New upstream release of nxagent (3.5.0-7).
  * Add lintian-overrides for every package. Override lintian warning:
    possible-new-upstream-release-without-new-version as there will
    be new upstream releases of NX subprojects that will not require
    a version increment of the Debian package.
  * Add individual watch files for NX components in this source package.
  * Change naming scheme of patch files.
  * Add man page for nxagent. Fix lintian warning: binary-without-manpage.
  * Add FreeNX patches for nxagent (some with other names compared to FreeNX):
    - 101_nxagent_set-rgb-path.patch
    - 102_xserver-xext_set-securitypolicy-path.patch
    - 103_nxagent_set-X0-config-path.patch
    - 104_nxagent_enable_debug.patch
    - 105_nxagent_export-remote-keyboard-config.patch
    - 106_nxagent_utf8-copy-clipboard.patch
    - 107_nxagent_clipboard-compound-text+small-bed-sheets.patch
    - 108_nxagent_wine-close-delay.patch
    - 109_nxagent_locale-utf8-compound-text.patch